package com.florentina.enums;

public enum TypeOfTopic {
    REGULAR,
    ANNOUNCEMENT,
    NEWS
}
